2002-05-15  Paolo Maggi <maggi@athena.polito.it>

	Added basic session management (thanks to Federico Mena Quintero
	for his initial patch and his help)

	* gedit-session.[ch], bonobo-mdi-session.[ch]: new files

	* Makefile.am: added the new files to gedit_SOURCES

	* gedit-debug.[ch]: added support for debugging session
	management related stuffs

	* gedit-document.[ch]  (gedit_document_get_raw_uri): new function

	* gedit-mdi-child.c (gedit_mdi_child_get_config_string): new function
	(implementation of the virtual function get_config_string)

	* gedit2.c (main): almost rewritten to add SM support

2002-05-14  Paolo Maggi <maggi@athena.polito.it>

	* gedit-ui.xml: added accellerator to help menu items
	(thanks to Glynn Foster)

2002-05-14  Paolo Maggi <maggi@athena.polito.it>

	gedit-file.c: Fixed bug #77834

	gedit-document.c (gedit_document_get_uri)
	(gedit_document_get_short_name): always return valid 
	UTF-8 text
	
2002-05-10  Paolo Maggi <maggi@athena.polito.it>

	* gedit-print.c: fixed bug #79733, now the default
	is to print to a printer

2002-05-09  Paolo Maggi <maggi@athena.polito.it>

	* gedit-print.c: changed the print dialog title
	to "Print"

2002-05-07  Paolo Maggi <maggi@athena.polito.it>

	* gedit-file-selector-util.c: use a quark to
	store retval (user_data_id)

2002-05-06  Paolo Maggi <maggi@athena.polito.it>

	* gedit-mdi.c: set main window role

2002-05-06  Paolo Maggi <maggi@athena.polito.it>

	* gedit-document.c: fixed bug #80841 
	(Thanks to Mats-Ola Persson)

2002-05-03  Federico Mena Quintero  <federico@ximian.com>

	* gedit-document.c (gedit_document_save_as_real): Do saving in
	the following way:

		1. Get the real filename by following all the symlinks of
		   the original filename.  This is the icky function
		   follow_symlinks().

		2. Write a temporary filename with the buffer contents.

		3. If create_backup_copy, rename the real_filename to
		   real_filename.bak.

		4. Rename the temporary filename to the real_filename.
