@@ -1,3 +1,8 @@
+2002-05-15  James Willcox <jwillcox@cs.indiana.edu>
+
+	* gedit-document.c (gedit_document_get_uri):  previously was returning
+	a local path, instead of a URI.  Fixed now. (#76641)
+
 2002-05-15  Paolo Maggi <maggi@athena.polito.it>
 
 	Added basic session management (thanks to Federico Mena Quintero
